[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3"]
build-backend = "hatchling.build"

[project]
name = "pychrony"
dynamic = ["version"]
description = "Python bindings for chrony NTP client"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "arunderwood", email = "arunderwood@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Time Synchronization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pytest-cov>=7.0.0",
    # Future libchrony C library binding
    "ruff>=0.14.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "ty>=0.1.0",
    "tox>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/arunderwood/pychrony"
Repository = "https://github.com/arunderwood/pychrony.git"
Issues = "https://github.com/arunderwood/pychrony/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pychrony"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ty]
# Future C library binding configuration

# Pytest configuration
[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.uv.sources]
ty = { git = "https://github.com/astral-sh/ty.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ty",
]
