[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3", "cffi>=1.14.0"]
build-backend = "hatchling.build"

[project]
name = "pychrony"
dynamic = ["version"]
description = "Python bindings for chrony NTP client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "arunderwood", email = "arunderwood@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Time Synchronization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "cffi>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/arunderwood/pychrony"
Repository = "https://github.com/arunderwood/pychrony.git"
Issues = "https://github.com/arunderwood/pychrony/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/pychrony"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ty]
# Future C library binding configuration

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.11",
    "ty>=0.0.1",
    "tox>=4.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
